# MA-POCA-ET

./: pyproject.toml
ma-poca/Environments/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ma-poca/config/coma/: BatonPass.yaml  DungeonEscape.yaml  ParticlesEnv.yaml  PushBlockCollab.yaml
ma-poca/config/mir3_poca/: BatonPass.yaml  DungeonEscape.yaml  ParticlesEnv.yaml  PushBlockCollab.yaml
ma-poca/config/poca/: BatonPass.yaml  DungeonEscape.yaml  ParticlesEnv.yaml  PushBlockCollab.yaml
ma-poca/config/ppo/: BatonPass.yaml  DungeonEscape.yaml  ParticlesEnv.yaml  PushBlockCollab.yaml
ma-poca/config/schemas/: checkpoint_settings_schema.json  engine_settings_schema.json  environment_parameters_schema.json  environment_settings_schema.json  ma_poca_schema.json  network_settings_schema.json  python_numbers_schema.json  torch_settings_schema.json  trainer_settings_schema.json
ma-poca/mapoca/: pyproject.toml  setup.py
ma-poca/mapoca/mapoca/: particles_env.py  registry_entries.py  training_analytics_side_channel.py
ma-poca/mapoca/mapoca/plugins/: stats_writer.py
ma-poca/mapoca/mapoca/torch_utils/: __init__.py  cpu_utils.py  torch.py
ma-poca/mapoca/mapoca/trainers/: action_info.py  agent_processor.py  behavior_id_utils.py  buffer.py  cli_utils.py  demo_loader.py  directory_utils.py  env_manager.py  environment_parameter_manager.py  exception.py  learn.py  run_experiment.py  settings.py  simple_env_manager.py  stats.py  subprocess_env_manager.py  trainer_controller.py  training_status.py  trajectory.py  upgrade_config.py
ma-poca/mapoca/mapoca/trainers/ghost/: controller.py  trainer.py
ma-poca/mapoca/mapoca/trainers/model_saver/: model_saver.py  torch_model_saver.py
ma-poca/mapoca/mapoca/trainers/optimizer/: __init__.py  optimizer.py  torch_optimizer.py
ma-poca/mapoca/mapoca/trainers/poca/: optimizer_torch.py  trainer.py
ma-poca/mapoca/mapoca/trainers/policy/: __init__.py  checkpoint_manager.py  policy.py  torch_policy.py
ma-poca/mapoca/mapoca/trainers/ppo/: optimizer_torch.py  trainer.py
ma-poca/mapoca/mapoca/trainers/sac/: optimizer_torch.py  trainer.py
ma-poca/mapoca/mapoca/trainers/torch/: action_flattener.py  action_log_probs.py  action_model.py  agent_action.py  attention.py  conditioning.py  decoders.py  distributions.py  encoders.py  layers.py  model_serialization.py  networks.py  utils.py
ma-poca/mapoca/mapoca/trainers/torch/components/bc/: module.py
ma-poca/mapoca/mapoca/trainers/torch/components/reward_providers/: __init__.py  base_reward_provider.py  curiosity_reward_provider.py  extrinsic_reward_provider.py  gail_reward_provider.py  reward_provider_factory.py  rnd_reward_provider.py
ma-poca/mapoca/mapoca/trainers/trainer/: __init__.py  rl_trainer.py  trainer.py  trainer_factory.py
